--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
 		"typescript": "^4.7.4",
 		"vite": "^2.9.13"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"chakra-ui-svelte": "0.0.2-next.3"
+	}
 }
